# zkp-one-factor-auth

./: Dockerfile-client  Dockerfile-server  README.md
client/: .env  Cargo.toml  build.rs
client/protos/: zkp_auth.proto
client/src/: login.rs  main.rs  register.rs  shared.rs
server/: .env  Cargo.toml  build.rs
server/src/: main.rs  shared.rs
