[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
num-modular = "0.5.1"
num-traits = "0.2.15"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.9.2"
